git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@128 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/LINGI2132-Langages_et_traducteurs/syntax/document.tex
+++ b/LINGI2132-Langages_et_traducteurs/syntax/document.tex
@@ -4,7 +4,7 @@
 
 \newcommand{\docType}	{Définition de la syntaxe}
 \newcommand{\docDate}	{17/02/2012}
-\newcommand{\docAuthor}	{Mulders Corentin, Forêt Nicolas, Pelsser François}
+\newcommand{\docAuthor}	{gr10 : Mulders Corentin, Forêt Nicolas, Pelsser François}
 \newcommand{\courseCode}{LINGI2132}
 \newcommand{\courseName}{Langages et traducteurs}
 \usepackage{syntax}
