--- a/LINGI2365-Constraint_programming/Assignment2/report/document.tex
+++ b/LINGI2365-Constraint_programming/Assignment2/report/document.tex
@@ -49,7 +49,8 @@ solve<cp>{
 \end{lstlisting}
 
 The advantage of this model is that the decision variable is well chosen for the problem since there will be only one group chosen each week for each golfer. \\ 
-This variable also allows to write simple constraints.  
+This variable also allows to write simple constraints. \\ 
+
 \subsubsection{Second model}
 For our second model we considered using a different variable. The variable used is the golfer number that is playing in a given place in a group. \\ 
 Then we have to write constraints so that each player can be placed in only one place each week and that a golfer has different opponents each week. 
@@ -136,13 +137,30 @@ We also need to apply a lot of constraints because of this choice of variable.
 
 \subsection{Symmetries in the problem}
 
+There are some symetries in this problem : 
+\begin{itemize}
+	\item Symetry on the weeks : every pair of weeks in the solution can be swapped. 
+	\item Symetry on the groups : every group composition can be exchanged with another group from the same week. 
+	\item Symetry on the golfers : any golfer's complete schedule can be exchanged with the complete schedule of another golfer. However if the two were supposed to play against each other at some time their IDs have to be exchanged in the respective schedules too.
+\end{itemize}
+
+We tried to use these symetries to improve our first model by reducing the search space. To do this we added two variables. \\ 
+One keeps track of the lowest bound for the golfers IDs in each slot for each week. This allows us to add constraints that make sure that the slots are numbered in an order determined by the lowest golfer ID from the slot. This removes the possibility to swap two slots. \\ 
+The other does the same kind of thing for the weeks. \\ 
+We also changed the search method to make sure to not assign values that are not in the domain of the variables anymore. \\ \\ 
+
+However this only made the model worst because it already finds the solution without searching much so by adding constraints and variable we complicated it to no avail. In the end we chose to stick to the original model that worked better. \\ 
+
+
+
+
+
 \subsection{Maximum number of weeks identified in a reasonable time limit}
 The maximum number of weeks we could identify in a reasonable time limit is 9 weeks using our first model. It took around 100ms to find a solution for 9 weeks but when searching for a solution for 10 weeks we kill the program after 2min. \\ 
-To compare with our other models, the second model  And the third found a solution for 3 weeks in around 14s and was killed after 2min when trying to find one for 4 weeks.
+To compare with our other models, the second model found a solution for 5 weeks in around 20s. And the third found a solution for 3 weeks in around 14s and was killed after 2min when trying to find one for 4 weeks. \\ 
 
 \subsection{Time needed, number of failures and number of choices for each number of weeks}
-These are the results obtained with our first model since it's the most efficient one. 
-
+These are results obtained with our first model since it's the most efficient one. 
 
 \begin{center}
 		\begin{tabular}{|l|c|c|c|}
@@ -165,5 +183,13 @@ These are the results obtained with our first model since it's the most efficien
 
 
 \section{The time tabling problem} 
+
+\subsection{Model for the problem}
+
+\subsection{Symmetries}
+
+\subsection{Results on test files}
+
+\subsection{Time needed, number of failures and number of choices for each instance}
 
 \end{document}
