git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@189 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/LINGI2365-Constraint_programming/Assignment2/report/document.tex
+++ b/LINGI2365-Constraint_programming/Assignment2/report/document.tex
@@ -185,6 +185,9 @@ These are results obtained with our first model since it's the most efficient on
 \section{The time tabling problem} 
 
 \subsection{Model for the problem}
+\subsubsection{Description}
+\subsubsection{Advantages and disadvantages}
+\subsubsection{Alternative models}
 
 \subsection{Symmetries}
 
