git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@194 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/LINGI2365-Constraint_programming/Assignment2/report/document.tex
+++ b/LINGI2365-Constraint_programming/Assignment2/report/document.tex
@@ -191,6 +191,8 @@ These are results obtained with our first model since it's the most efficient on
 
 \subsection{Symmetries}
 
+A possible symetry in this problem would be that every time slots pair can be exchanged. However we don't use this in our solution because it seemed unneccessary. 
+
 \subsection{Results on test files}
 
 As we can see in the next section, our program found a solution in around 4s for most of the provided test files. The exception are the instances 04, 09 and 19 for wich our solver seems to have more difficulties. \\ 
