git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@197 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/LINGI2365-Constraint_programming/Assignment2/report/document.tex
+++ b/LINGI2365-Constraint_programming/Assignment2/report/document.tex
@@ -310,8 +310,11 @@ solve<cp>{
 \end{lstlisting}
 
 \subsubsection{Advantages and disadvantages}
+The disadvantages are the symmetries that aren't taken in charge. \\
+The advantages are the precomputed values that drasticly reduces the domains and help describe the constraints.  The use of the table is also a good help.
+
 \subsubsection{Alternative models}
-We tought to a model when we had an array with two 
+We tought to a model when we had an array with two index the time slot and the room and the event as value, but we didn't find it convincing because we had to make too much computation to establish the constraints.
 
 \subsection{Symmetries}
 
