--- a/LINGI2365-Constraint_programming/Assignment2/report/document.tex
+++ b/LINGI2365-Constraint_programming/Assignment2/report/document.tex
@@ -314,11 +314,11 @@ The disadvantages are the symmetries that aren't taken in charge. \\
 The advantages are the precomputed values that drasticly reduces the domains and help describe the constraints.  The use of the table is also a good help.
 
 \subsubsection{Alternative models}
-We tought to a model when we had an array with two index the time slot and the room and the event as value, but we didn't find it convincing because we had to make too much computation to establish the constraints.
+We tought to make a model with an array with two indexes, the time slot and the room, and the event as value. However we didn't find it convincing enough to implement it because we would have had to make too much computation to establish the constraints.
 
 \subsection{Symmetries}
 
-A possible symetry in this problem would be that every time slots pair can be exchanged. However we don't use this in our solution because it seemed unneccessary. 
+A possible symmetry in this problem would be that every time slots pair can be exchanged. However we don't use this in our solution because it seemed unneccessary. 
 
 \subsection{Results on test files}
 
