git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@211 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/LINGI2263-Computational_linguistics/Assignment 1/report/document.tex
+++ b/LINGI2263-Computational_linguistics/Assignment 1/report/document.tex
@@ -25,6 +25,7 @@ Some of these graphs are very basic like the gender graph that simply looks for 
 
 \section{Extraction patterns}
 
+All our complete Unitex graphs are available in the ressource folder attached with our script. 
 \subsection{Context and other idiosyncrasies used in solution}
 
 We relied on different idiosyncrasies to single out the informations depending of what we were looking for. Here is a brief explanation of how we extracted data for each type of information: 
