--- a/SINF2275-Data_mining_and_decision_making/Assignment1/report/document.tex
+++ b/SINF2275-Data_mining_and_decision_making/Assignment1/report/document.tex
@@ -48,7 +48,7 @@ If a case is a prison square and the player stops on it when using the risky dic
 
 \subsubsection{retreat squares}
 
-If a case $i$ is a retreat square then if there is a probability $p$ to stop on this case. The probability to stop on this case becomes $0$ and there is a probability $p$ to get on the  $i-2$ square (or square $1$ if $(i-2)<1$). Off course that is only the cas eif the dice played was the risky dice. 
+If a case $i$ is a retreat square then, if there is a probability $p$ to stop on this case,  the probability to stop on this case becomes $0$ and there is a probability $p$ to get on the  $i-2$ square (or square $1$ if $(i-2)<1$). Off course that is only the cas eif the dice played was the risky dice. 
 
 
 \subsubsection{Adaptation to any kind of of Snakes and ladders game}
@@ -67,7 +67,7 @@ As an example of this functionality we designed a more complex game board and us
 %This board will be used as well as the basic board for the analisys of our results compared to a naive strategy. 
 
 %\subsubsection{Use of reinforcement learning}
-
+Custom boards can be passed as parameters to our "snake.m" implementation of the markov decision process. The \textbf{[Expec, Dice] = markovDec(list)} function simply calls "snake.m" with the basic board. 
 
 \section{Results obtained with our implementation}
 
@@ -78,6 +78,11 @@ We used octave to write our implementation of \textbf{[Expec, Dice] = markovDec(
 	\item[Risky] always plays the risky dice.
 	\item[Random] has a $50\%$ probability to play either of the dices.
 \end{description}
+ 
+We test each of these policies on three different boards. The two first are the variants of the basic board from the assignment instructions. The first one when the game stops whenever a player goes through the arrival square. And the second one when the game only stops if the player stops on the arrival. \\ 
+The third board used is our example of complex board represented in figure \ref{newboard}. \\ \\ 
+For each of these boards we used differents traps sets. And for each trap set we simulated 20 games to collect statistics. 
+
 
 
 \end{document}
