git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@224 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/SINF2275-Data_mining_and_decision_making/Assignment1/report/document.tex
+++ b/SINF2275-Data_mining_and_decision_making/Assignment1/report/document.tex
@@ -28,6 +28,9 @@ We represent the game board as an affinity matrix, its elements are :
 	\item $a_{ij}=1$ if the player goes from i to j following the main path.
 	\item $a_{ij}=2$ if the player goes from i to j following a secondary path.
 \end{itemize}
+The case when the game stops whenever the player goes through the arrival is represented by the affinity matrix arrival going to itself. In other words if g is the goal then $a_{gg} = 1$. \\ 
+And if the game is setso that the board is a loop and the player must stop on the arrival to win then if $s$ is the starting point and $g$ the goal $a_{gs} = 1$. \\ \\ 
+
 The initial state and goal state values are also stored each in a variable. \\ 
 In addition to this we have the vector List received as argument that defines the types of squares. \\ 
 
@@ -88,9 +91,62 @@ We used octave to write our implementation of \textbf{[Expec, Dice] = markovDec(
 	\item[Random] has a $50\%$ probability to play either of the dices.
 \end{description}
  
-We test each of these policies on three different boards. The two first are the variants of the basic board from the assignment instructions. The first one when the game stops whenever a player goes through the arrival square. And the second one when the game only stops if the player stops on the arrival. \\ 
-The third board used is our example of complex board represented in figure \ref{newboard}. \\ \\ 
-For each of these boards we used differents traps sets. And for each trap set we simulated 20 games to collect statistics. 
+We test each of these policies on three different boards. The two first are the variants of the basic board from the assignment instructions. The first one when the game stops whenever a player goes through the arrival square, we will call it the \textbf{simpleBoard1}. And the second one when the game only stops if the player stops on the arrival, we will call it the \textbf{simpleBoard2}. \\ 
+The third board used is our example of complex board represented in figure \ref{newboard}, we will call it the \textbf{complexBoard}. \\ \\ 
+For each of these boards we used differents traps sets. And for each trap set we simulated 50 games to collect statistics. \\ \\ 
+
+Here are the number of turns needed to finish for the \textbf{simpleBoard1} : 
+
+
+\begin{center}
+		\begin{tabular}{|r|ccc|}
+			\hline
+			policy & minimum & maximum & mean \\ 
+			\hline
+			 Security & 8.0000 &  46.0000 &  17.5000 \\
+     	Risky & 5.0000  & 42.0000  & 12.4800 \\ 
+    	Random & 4.0000 &  49.0000  & 14.2000 \\ 
+   		markovDec & 5.0000 &  20.0000 &  10.6800 \\ 
+   		\hline
+		\end{tabular}
+\end{center}
+
+
+Here are the number of turns needed to finish for the \textbf{simpleBoard2} : 
+
+
+\begin{center}
+		\begin{tabular}{|r|ccc|}
+			\hline
+			policy & minimum & maximum & mean \\ 
+			\hline
+			 Security &     9.0000  & 28.0000  & 16.8800 \\
+    Risky & 4.0000  & 78.0000 &  18.4200 \\ 
+    Random & 5.0000  & 84.0000 &  27.5400 \\ 
+    markovDec & 4.0000 &  26.0000  & 11.2000  \\ 
+   		\hline
+		\end{tabular}
+\end{center}
+
+Here are the number of turns needed to finish for the \textbf{complexBoard} : 
+
+
+\begin{center}
+		\begin{tabular}{|r|ccc|}
+			\hline
+			policy & minimum & maximum & mean \\ 
+			\hline
+			 Security &                            24          &             788         &           154.78 \\
+       Risky &               1001           &           1001          &            1001 \\ 
+       Random &               1001        &             1001             &         1001 \\ 
+       markovDec &                 17         &              249             &         62.6 \\ 
+ 
+   		\hline
+		\end{tabular}
+\end{center}
+
+As we can see our markov decision process yields better mean results on every board. However the improvement is most visible on our complex board where the risky and random policies are very bad (the $1001$ number of turns means our program stoped playing without reaching the goal sinc eit took too much turns) and our policy is still nearly two times better than the default security strategy. 
+
 
 
 
